# ModelForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-serve.txt  requirements.txt
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/deployments/: page.tsx
frontend/components/: AccuracyChart.tsx  DeployingBanner.tsx  ExperimentsTable.tsx  Header.tsx  StatusBadge.tsx
frontend/lib/: supabase.ts
models/baseline/: model.pkl
scripts/: export_model.py  predict.py
src/data/: data_loader.py  splitter.py
src/experiments/: run_baseline_experiment.py
src/modelforge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: linear_regression.py
src/registry/: model_loader.py
src/serving/: app.py
src/training/: evaluate.py  train_baseline.py
supabase/: schema.sql
